--- a/package.json
+++ b/package.json
@@ -4,24 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build-test": "vue-cli-service build --mode build-test",
-    "build-prod": "vue-cli-service build --mode build-prod",
+    "test": "vue-cli-service build --mode build-test",
+    "build": "vue-cli-service build --mode build-prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^3.7.2",
     "axios": "^0.18.1",
     "core-js": "^3.6.4",
     "driver.js": "^0.9.7",
     "echarts": "^4.2.1",
     "element-ui": "^2.15.1",
-    "file-saver": "^2.0.2",
     "screenfull": "^4.2.0",
     "vue": "^2.6.12",
-    "vue-count-to": "^1.0.13",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2",
-    "xlsx": "^0.14.4"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -30,9 +26,11 @@
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
+    "compression-webpack-plugin": "^5.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "husky": "^4.2.5",
+    "image-webpack-loader": "^7.0.1",
     "prettier": "^1.19.1",
     "sass": "^1.26.0",
     "sass-loader": "^8.0.1",
