--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.15.1",
     "screenfull": "^4.2.0",
     "vue": "^2.6.12",
+    "vue-pdf": "^4.2.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
